# flns-ttp

./: .gitignore  Cargo.toml  README.md  check-solutions.sh  installation.sh
benches/: flns.rs
results/: README.md  results.csv
scripts/: analysis.ipynb  bkrs.ipynb  comparison.ipynb  count.ipynb  neighborhood.ipynb  progress.ipynb  results.ipynb  run.py
scripts/bkr/: best-known-gls-2018.xlsx  bkrs.csv  cs2sa.csv  elyafraniLocalSearchBased2017.csv  hybrid_local_search_heuristics.csv  namaziCooperativeCoordinationSolver2019.csv  namaziSolvingTravellingThief2023.csv  results.xlsx  wuijtsInvestigationTravelingThief2019a.csv
scripts/lib/: __init__.py
scripts/lib/ttp/: __init__.py  algo.py  problem.py  solution.py
src/: env.rs  lib.rs  linkernighan.rs  main.rs  problem.rs  solution.rs
tests/check/: 002_single_line  003_four_lines  004_no_starting_brackets  005_no_ending_brackets  006_both_brackets_missing  007_route_with_no_numbers  008_loot_with_no_numbers  020_route_is_empty  021_route_is_shorter  022_route_is_longer  023_doesnt_start_at_1  024_route_contains_zero  025_route_outside_range  026_route_missing_node  040_items_not_sorted  041_items_outside_range  042_item_repeated  050_over_capacity  100_correct  101_correct_no_items  103_correct_multiple_items_per_city  201_extra_fitness_not_number
