cargo-features = ["profile-rustflags"]

[package]
name = "flns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Look into "Profile Guided Optimization"
# https://nnethercote.github.io/perf-book/build-configuration.html#profile-guided-optimization

# Also look into profiling
# https://nnethercote.github.io/perf-book/hashing.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1.0.71"
bitvec = "1.0.1"
clap = { version = "4.3.0", features = ["derive"] }
humantime = "2.1.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rustc-hash = "1.1.0"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[lib]
name = "flns"
path = "src/lib.rs"
bench = false

[[bin]]
name = "flns"
path = "src/main.rs"

[[bench]]
name = "flns"
harness = false
